apps/mosquitto/mosquitto-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mosquitto
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: mosquitto-ws
      port: 9001
      targetPort: 9001
      protocol: TCP
