apps/mosquitto/mosquitto-ext-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto-ext
  labels:
    type: external
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - mosquitto.{hostname}
      secretName: mosquitto.ing.cert
  rules:
    - host: mosquitto.{hostname}
      http:
        paths:
          - backend:
              service:
                name: mosquitto
                port:
                  number: 9001
            path: /
            pathType: Prefix

# 

  # annotations:
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  #   nginx.ingress.kubernetes.io/websocket-services: mosquitto

    # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
  #   nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
  #   nginx.ingress.kubernetes.io/enable-cors: "true"
  #   nginx.ingress.kubernetes.io/server-snippets: |
  #     location / {
  #       proxy_set_header Upgrade $http_upgrade;
  #       proxy_http_version 1.1;
  #       proxy_set_header X-Forwarded-Host $http_host;
  #       proxy_set_header X-Forwarded-Proto $scheme;
  #       proxy_set_header X-Forwarded-For $remote_addr;
  #       proxy_set_header Host $host;
  #       proxy_set_header Connection "upgrade";
  #       proxy_cache_bypass $http_upgrade;
  #       }


  # rules:
  # - host: mosquitto.{hostname}
  #   http:
  #     paths:
  #       - backend:
  #           service:
  #             name: mosquitto
  #             port:
  #               number: 9001
  #         path: /
  #         pathType: Prefix
